--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -153,6 +153,14 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" >
         </activity>
+        
+         <activity
+            android:name=".ui.message.MessageChatActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
     </application>
 
 </manifest>
