修改活动和机会

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -284,7 +284,7 @@
             android:windowSoftInputMode="adjustPan" >
         </activity>
         <activity
-            android:name=".ui.chance.OfferActivity"
+            android:name=".ui.chance.OfferAddActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
