--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -368,6 +368,13 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" >
         </activity>
+          <activity
+            android:name=".ui.dynamic.DynamicOtherActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
         
         <!-- share -->
         <activity
