--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -375,6 +375,13 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" >
         </activity>
+         <activity
+            android:name=".ui.esaemob.ChatActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
         
         <!-- share -->
         <activity
