--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.timetalent.client"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1" >
 
     <uses-sdk
         android:minSdkVersion="10"
@@ -219,6 +219,13 @@
         </activity>
         <activity
             android:name=".ui.user.MyAboutActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
+        <activity
+            android:name=".ui.user.MyHelpActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
