--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -448,6 +448,13 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" >
         </activity>
+            <activity
+            android:name=".ui.esaemob.AlertDialog"
+            android:configChanges="keyboard|keyboardHidden|orientation"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
         
         <!-- share -->
         <activity
