--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -246,21 +246,21 @@
             android:windowSoftInputMode="adjustPan" >
         </activity>
         <activity
-            android:name=".ui.user.MychongzhiActivity"
+            android:name="com.timetalent.client.ui.pay.MychongzhiActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" >
         </activity>
         <activity
-            android:name=".ui.user.MytixianActivity"
+            android:name="com.timetalent.client.ui.pay.MytixianActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" >
         </activity>
         <activity
-            android:name=".ui.user.MychongzhifangshiActivity"
+            android:name="com.timetalent.client.ui.pay.MychongzhifangshiActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
@@ -330,7 +330,7 @@
             android:windowSoftInputMode="adjustPan" >
         </activity>
         <activity
-            android:name=".ui.user.MyqianbaoActivity"
+            android:name="com.timetalent.client.ui.pay.MyqianbaoActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
@@ -455,6 +455,22 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" >
         </activity>
+        
+            
+            
+            
+            
+            
+             <!-- alipay sdk begin -->
+        <activity
+            android:name="com.alipay.sdk.app.H5PayActivity"
+            android:configChanges="orientation|keyboardHidden|navigation"
+            android:exported="false"
+            android:screenOrientation="behind"
+            android:windowSoftInputMode="adjustResize|stateHidden" >
+        </activity>
+     
+        <!-- alipay sdk end -->
         
         <!-- share -->
         <activity
