--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,9 +39,7 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
-    <application
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" /><application
         android:name="com.timetalent.client.TimeTalentApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -49,13 +47,26 @@
         android:screenOrientation="portrait"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".ui.MainActivity"
-            android:label="@string/app_name" >
+            android:name=".ui.GuideActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
+		<activity
+            android:name=".ui.MainActivity"
+            android:label="@string/app_name" >
         </activity>
         <activity
             android:name=".ui.BaseActivity"
@@ -72,20 +83,6 @@
         </activity>
         <activity
             android:name=".ui.BaseFragmentActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation"
-            android:launchMode="singleTop"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" >
-        </activity>
-        <activity
-            android:name=".ui.GuideActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation"
-            android:launchMode="singleTop"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" >
-        </activity>
-        <activity
-            android:name=".ui.login.LoginActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
